tests/functional/lang/parse-fail-dup-attrs-7.err.exp
at «stdin»:7:13:
            6|     inherit x;
            7|     inherit x;
             |             ^
            8|   };

       error: attribute 'x' already defined at «stdin»:6:13
